--- a/index.html
+++ b/index.html
@@ -466,5 +466,10 @@
         </div>
       </div>
     </footer>
+    <div class="backdrop" class="is-open">
+      <div class="modal">
+        <button type="button" class="modal-btn"></button>
+      </div>
+    </div>
   </body>
 </html>
