--- a/index.html
+++ b/index.html
@@ -431,8 +431,8 @@
             digital marketing & growth solutions.
           </p>
         </div>
-        <div class="wrapper-social-media">
-          <p class="social-media-p">Social media</p>
+        <div class="footer-wrapper-social-media">
+          <p class="footer-social-media-p">Social media</p>
           <ul class="social-icon-footer">
             <li class="social-icon-li">
               <a href="" class="social-link-li">
@@ -465,11 +465,75 @@
           </ul>
         </div>
       </div>
-    </footer>
-    <div class="backdrop" class="is-open">
-      <div class="modal">
-        <button type="button" class="modal-btn"></button>
+      <div class="footer-wrapper-subscribe">
+        <p class="footer-wrapper-subscribe-p">Subscribe</p>
+        <label for="subscribe" class="modal-email">Subscribe</label>
+        <input
+          type="email"
+          name="subscribe-email"
+          class="modal-input"
+          placeholder="Email"
+          id="subscribe"
+        />
       </div>
-    </div>
+    </footer>
+    <!--     <div class="backdrop">
+      <div class="modal">
+        <button type="button" class="modal-btn">
+          <svg class="modal-btn-icon" width="28" height="28">
+            <use href="./images/icons.svg#icon-x-close"></use>
+          </svg>
+        </button>
+        <p class="modal-title section-title">
+          LEAVE A REVIEW ABOUT <span>OUR CHOCOLATE</span>
+        </p>
+        <form class="modal-form">
+          <div class="modal-field">
+            <label for="user-name" class="modal-label">Name</label>
+            <div class="modal-input-wrap">
+              <input
+                type="text"
+                name="user-name"
+                class="modal-input"
+                placeholder="Enter name"
+                id="user-name"
+              />
+              <svg class="modal-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-user"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-field">
+            <label for="user-email" class="modal-label">email</label>
+            <input
+              type="email"
+              name="user-email"
+              class="modal-input"
+              placeholder="Enter email"
+              id="user-email"
+            />
+          </div>
+          <div class="modal-field">
+            <input
+              type="tel"
+              name="user-phone"
+              class="modal-input"
+              placeholder="Enter phone"
+              required
+            />
+          </div>
+          <div class="modal-field">
+            <label for="user-text" class="modal-label">Comment</label>
+            <textarea
+              name="user-text"
+              id="user-text"
+              class="modal-text"
+              placeholder="Enter text"
+            ></textarea>
+          </div>
+          <button type="submit">Send</button>
+        </form>
+      </div>
+    </div> -->
   </body>
 </html>
