--- a/index.html
+++ b/index.html
@@ -135,7 +135,6 @@
               <div class="card">
                 <h3 class="team-img-name">Mark Guerrero</h3>
                 <p class="team-item-text">Product Designer</p>
-                <ul class="team-icon">
                 <ul class="icon-list">
                   <li class="team-icon-li">
                     <a href="" class="team-link-li">
@@ -421,8 +420,8 @@
       </section>
     </main>
     <!--Footer-->
-    <footer class="footer">
-      <div class="container footer-container">
+    <footer class="footer-container">
+      <div class="container">
         <div class="footer-container-logo">
           <a class="footer-logo" href="./index.html">
             WEB<span class="footer-logo-white">Studio</span></a
@@ -479,7 +478,7 @@
             <button type="submit" class="footer-btn">
               Subscribe
               <svg width="24" height="24" class="subscribe-icon">
-                <use href=""></use>
+                <use href="./images/icons.svg#icon-subscribe"></use>
               </svg>
             </button>
             <svg class="footer-btn-icon" widh="24" heigh="24"></svg>
@@ -487,5 +486,45 @@
         </div>
       </div>
     </footer>
+    <div class="backdrop">
+      <div class="modal">
+        <button type="button" class="modal-btn">
+          <svg class="modal-btn-icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-close-black"></use>
+          </svg>
+        </button>
+        <p class="modal-title">Leave your contacts and we will call you back</p>
+        <form class="modal-form">
+          <div class="modal-info">
+            <label for="input-name">Name</label>
+            <input
+              type="text"
+              name="user-name"
+              id="input-name"
+              class="modal-input"
+            />
+          </div>
+          <div class="modal-info">
+            <label for="input-tel">Phone</label>
+            <input
+              type="tel"
+              name="user-phone"
+              id="input-tel"
+              class="modal-input"
+            />
+          </div>
+          <div class="modal-info">
+            <label for="input-email">Email</label>
+            <input
+              type="email"
+              name="user-email"
+              id="input-email"
+              class="modal-input"
+            />
+          </div>
+          <button type="submit">Send</button>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
