--- a/index.html
+++ b/index.html
@@ -481,12 +481,12 @@
                 <use href="./images/icons.svg#icon-subscribe"></use>
               </svg>
             </button>
-            <svg class="footer-btn-icon" widh="24" heigh="24"></svg>
+            <svg class="footer-btn-icon" width="24" height="24"></svg>
           </form>
         </div>
       </div>
     </footer>
-    <div class="backdrop">
+    <div class="backdrop is-open">
       <div class="modal">
         <button type="button" class="modal-btn">
           <svg class="modal-btn-icon" width="8" height="8">
@@ -496,33 +496,79 @@
         <p class="modal-title">Leave your contacts and we will call you back</p>
         <form class="modal-form">
           <div class="modal-info">
-            <label for="input-name">Name</label>
-            <input
-              type="text"
-              name="user-name"
-              id="input-name"
-              class="modal-input"
-            />
+            <label for="input-name" class="modal-label">Name</label>
+            <div class="modal-input-wrap">
+              <input
+                type="text"
+                name="user-name"
+                id="input-name"
+                class="modal-input"
+              />
+              <svg class="modal-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-person-black"></use>
+              </svg>
+            </div>
           </div>
           <div class="modal-info">
-            <label for="input-tel">Phone</label>
-            <input
-              type="tel"
-              name="user-phone"
-              id="input-tel"
-              class="modal-input"
-            />
+            <label for="input-tel" class="modal-label">Phone</label>
+            <div class="modal-input-wrap">
+              <input
+                type="tel"
+                name="user-phone"
+                id="input-tel"
+                class="modal-input"
+              />
+              <svg class="modal-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-phone-black"></use>
+              </svg>
+            </div>
           </div>
           <div class="modal-info">
-            <label for="input-email">Email</label>
-            <input
-              type="email"
-              name="user-email"
-              id="input-email"
-              class="modal-input"
-            />
+            <label for="input-email" class="modal-label">Email</label>
+            <div class="modal-input-wrap">
+              <input
+                type="email"
+                name="user-email"
+                id="input-email"
+                class="modal-input"
+              />
+              <svg class="modal-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-email-black"></use>
+              </svg>
+            </div>
           </div>
-          <button type="submit">Send</button>
+          <div class="modal-info">
+            <label for="input-text" class="modal-label">Comment</label>
+            <textarea
+              name="input-text"
+              id="input-text"
+              class="modal-text"
+              placeholder="Text input"
+            ></textarea>
+          </div>
+          <div class="modal-info">
+            <input
+              type="checkbox"
+              name="modal-check"
+              id="modal-check"
+              value="true"
+              class="check-input visually-hidden"
+            />
+            <label for="modal-check" class="check-text">
+              <span
+                ><svg>
+                  <use
+                    href="./images/icons.svg#icon-check"
+                    class="modal-chek-icon"
+                    width="10"
+                    height="8"
+                  ></use></svg
+              ></span>
+              I accept the terms and conditions of the
+              <a href="">Privacy Policy</a></label
+            >
+          </div>
+          <button class="input-btn" type="submit">Send</button>
         </form>
       </div>
     </div>
