--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
                 type="email"
                 class="footer-input"
                 name="footer-input"
-                placeholder="Email"
+                placeholder="E-mail"
               />
             </label>
             <button type="submit" class="footer-btn">
@@ -496,76 +496,71 @@
         <p class="modal-title">Leave your contacts and we will call you back</p>
         <form class="modal-form">
           <div class="modal-info">
-            <label for="input-name" class="modal-label">Name</label>
+            <label for="user-name" class="modal-label">Name</label>
             <div class="modal-input-wrap">
               <input
                 type="text"
                 name="user-name"
-                id="input-name"
+                id="user-name"
                 class="modal-input"
               />
-              <svg class="modal-icon" width="18" height="18">
+              <svg class="modal-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-person-black"></use>
               </svg>
             </div>
           </div>
           <div class="modal-info">
-            <label for="input-tel" class="modal-label">Phone</label>
+            <label for="user-phone" class="modal-label">Phone</label>
             <div class="modal-input-wrap">
               <input
                 type="tel"
                 name="user-phone"
-                id="input-tel"
+                id="user-phone"
                 class="modal-input"
               />
-              <svg class="modal-icon" width="18" height="18">
+              <svg class="modal-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-phone-black"></use>
               </svg>
             </div>
           </div>
           <div class="modal-info">
-            <label for="input-email" class="modal-label">Email</label>
+            <label for="user-email" class="modal-label">Email</label>
             <div class="modal-input-wrap">
               <input
                 type="email"
                 name="user-email"
-                id="input-email"
+                id="user-emailÍ"
                 class="modal-input"
               />
-              <svg class="modal-icon" width="18" height="18">
+              <svg class="modal-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-email-black"></use>
               </svg>
             </div>
           </div>
-          <div class="modal-info">
-            <label for="input-text" class="modal-label">Comment</label>
+          <div class="modal-info-com">
+            <label for="user-comment" class="modal-label">Comment</label>
             <textarea
-              name="input-text"
-              id="input-text"
+              name="user-comment"
+              id="user-comment"
               class="modal-text"
               placeholder="Text input"
             ></textarea>
           </div>
-          <div class="modal-info">
+          <div class="modal-info-check">
             <input
               type="checkbox"
-              name="modal-check"
-              id="modal-check"
+              name="user-privacy"
+              id="user-privacy"
               value="true"
               class="check-input visually-hidden"
             />
-            <label for="modal-check" class="check-text">
-              <span
-                ><svg>
-                  <use
-                    href="./images/icons.svg#icon-check"
-                    class="modal-chek-icon"
-                    width="10"
-                    height="8"
-                  ></use></svg
+            <label for="user-privacy" class="check-text">
+              <span class="span"
+                ><svg class="modal-chek-icon" width="10" height="8">
+                  <use href="./images/icons.svg#icon-check"></use></svg
               ></span>
               I accept the terms and conditions of the
-              <a href="">Privacy Policy</a></label
+              <a class="modal-check-link">Privacy Policy</a></label
             >
           </div>
           <button class="input-btn" type="submit">Send</button>
