--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
               <input
                 type="email"
                 name="user-email"
-                id="user-emailÍ"
+                id="user-email"
                 class="modal-input"
               />
               <svg class="modal-icon" width="18" height="24">
